- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 3.3.0
- 
    Ubuntu 14.04 LTS 64 bit
 Ubuntu 14.10 64 bit
- Create a project and configure it for an Android kit.
- Unconnect all Android devices.
- Click the "Run" button.
 The "Select Android Device" dialog will show up.
- Click "Create Android Virtual Device".
- Enter reasonable data and click "OK".
 You'll see an error message:Error: Failed to create the SD card. Error: Failed to create sdcard in the AVD folder. 
I can create an AVD using "Tools" -> "Options..." -> "Android" -> "Start AVD Manager..." -> "New..." because this allows creating it without an SD card. If there's no better fix, at least this should be possible in the said situation.
- is required for
- 
                    QTCREATORBUG-10601 No visual feedback when creating AVD -         
- Closed
 
-         
| For Gerrit Dashboard: QTCREATORBUG-13590 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 110378,2 | Android: Allow creating a avd without a sdcard | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |