Android: Allow creating a avd without a sdcard

And make that the default. SdCards are not that useful, so
creating one by default is odd.

Change-Id: Iddb34e9e3387c9c4488f7b2bc11799cfc28c9a43
Task-number: QTCREATORBUG-13590
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@theqtcompany.com>
Reviewed-by: BogDan Vatra <bogdan@kde.org>